Fix header spacing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,6 +9,7 @@
     background-size: cover;
     background-position: center;
     height: 200px;
+    margin-bottom: 2em;
 }
   
 .clearfloat {
